Support for --jvm option in Enso launcher